--- a/css/style.css
+++ b/css/style.css
@@ -4,30 +4,41 @@ body{
    font-family: 'PT Sans', sans-serif;
    font-weight: 700;
    border:0 40px 0 40px solid#F2F2F2;
+   margin: 0 40px 0 40px;
 }
 a{
    text-decoration: none;
    text-transform: uppercase;
 }
+h2{
+   font-weight: 700;
+}
 .header{
    display:flex;
    justify-content: space-between;
    background-color: #ffffff;
-   height: 56px;
-   margin: 0 40px;
-   
+   height: 55px;
 }
 .header_section{
    display: flex;
    align-items: center;
 }
-.header-item{
+.header_item{
    padding: 15px 72px;
    font-size: 14px;
    line-height:26px ;
 }
+.header_section_logo{
+   height: 70px;
+}
+.logo{
+   margin-top: 0;
+}
 main{
    border:0 40px 0 40px solid#F2F2F2;
+}
+h1{
+   display: none;
 }
 .welcome_content{
    text-align: center;
@@ -39,12 +50,13 @@ main{
    margin-top: 54px;
 }
 .shape{
-   margin-top:20px;
+   margin-top:24px;
 }
-.content {
+.content{
    height: 216px;
    text-align: center;
    margin-top: 43px;
+   background-color: #fff;
 }
 .content_title{
    font-size: 21px;
@@ -52,6 +64,7 @@ main{
    font-weight: 700;
 }
 .content_text{
+   font-size: 14px;
    text-transform: uppercase;
    font-weight: 400;
 }
@@ -61,49 +74,141 @@ main{
 .sity{
    display: flex;
    justify-content: space-between;
+   height: 256px;
 }
 .img_sity{
-   width: 800px;
-   height: 256px;
-   margin: 0 auto;
+   margin: 0 0 0 0;
 }
-.services_text_1 {
-   text-align: center;
-   margin: auto;
+.services_text_first {
    width: 400px;
-   height: 256px;
+   text-align: center;
+   margin:0 0 0 0;
    background-color: #81B3D2;
    text-transform: uppercase;
    padding-top: 47px;
 }
-.services-item {
-   display: inline-flex;
-   height: 330px;
-   align-items: center;
-   width: 33%;
+.services_item{
+   height: 256px;
+   display: flex;
+   justify-content: space-between;
    text-align: center;
+   margin: 0 auto;
+   text-transform: uppercase;
+   padding-top: 60px;
+   margin-bottom: 60px;
+   background-color: #fff;
+}
+.bridge{
+   display: flex;
+   justify-content: space-between;
+   height: 256px;
 }
 .img_bridge{
-   width: 800px;
-   height: 256px;
-   margin:left;
-   
+   margin: 0 auto;
 }
-.services_text_2{
-   text-align: center;
+.services_text_second{
    width: 400px;
-   height: 256px;
+   text-align: center;
+   margin: 0 auto;
    background-color: #81B3D2;
    text-transform: uppercase;
    padding-top: 47px;
 }
-
-
-
-
-
-
-.services_img {
+.services_text_item{
+   height:256px;
+   text-align: center;
+   margin: 0 auto;
+   background-color: #EEEEEE;
+   text-transform: uppercase;
+   padding-top: 47px;  
+   display: flex;
+   justify-content: space-between;
 }
-.bridge {
+.text{
+   width: 400px;
+   height: 256px;
 }
+.content_item{
+   text-transform: uppercase;
+   text-align: center;
+}
+.search{
+   text-align: center;
+   margin-bottom: 0;
+}
+.search_hotel{
+   text-align: center;
+   width: 568px;
+   height: 86px;
+   background: #766357;
+   margin: 0 auto;
+   text-transform: uppercase;
+   line-height: 26px;
+}
+.search_hotel h3{
+   padding-top: 30px;
+   font-weight: 700;
+   color: #ffffff;
+   font-size: 21px;
+}
+.form{
+   width:1199px;
+   height:594px;
+   margin: 0 auto;
+   text-transform: uppercase;
+}
+.form_content{
+   width: 568px;
+   height: 395px;
+   margin: 0 auto;
+   background: #ffffff;
+   padding:55px;
+}
+input{
+   background: #f2f2f2;
+   text-transform: uppercase;
+   font-weight: 700;
+}
+.label{
+   display: flex;
+}
+.child{
+   margin-left: 60px;
+}
+.button{
+   width:458px;
+   height:58px;
+   background:#81B3D2;
+   font-size: 21px;
+   text-transform: uppercase;
+   font-weight: 700;
+   color: #ffffff;
+}
+.footer{
+   height: 120px;
+   padding-left: 111px;
+   padding-right: 138px; 
+   vertical-align: middle;
+}
+.footer_section{
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   text-transform: uppercase;
+   margin-top: 23px;
+   
+}
+.footer_img_item{
+  width: 46px;
+  height: 48px;
+  background-color: #81B3D2;
+}
+.footer_from{
+   display: flex;
+   justify-content: space-between;
+}
+.phone{
+   font-size: 21px;
+   font-weight: 700;
+}
+
