--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,36 @@
 *{box-sizing: border-box;}
-body{
+
+:root{
+   --basic-black: #000000;
+   --basic-white: #fffffff;
+   --basic-blue: #81B3D2;
+   --basic-brown: #766357;
+   --basic-gray: #333333;
+   --basic-light-grey: #eeeeee;
+   --basic-light-dark: #231F20;
+}
+.page{
+   height: 100%;
+}
+.page-body{
    width: 1200px;
    font-family: 'PT Sans', sans-serif;
    font-weight: 700;
    border:0 40px 0 40px solid#F2F2F2;
    margin: 0 40px 0 40px;
-}
-a{
-   text-decoration: none;
-   text-transform: uppercase;
+   display: grid;
 }
 h2{
    font-weight: 700;
+   display: none;
+}
+a{
+   text-transform: uppercase;
+   text-decoration: none;
+   color: #000000;
+}
+li{
+   list-style-type:none
 }
 .header{
    display:flex;
@@ -19,31 +38,37 @@ h2{
    background-color: #ffffff;
    height: 55px;
 }
-.header_section{
+.page-menu{
    display: flex;
    align-items: center;
 }
-.header_item{
+.header-menu{
+   display: flex;
+   flex-wrap: nowrap;
+}
+.header-item{
    padding: 15px 72px;
    font-size: 14px;
    line-height:26px ;
 }
-.header_section_logo{
+.header-section-logo{
    height: 70px;
 }
 .logo{
    margin-top: 0;
+   z-index: 10;
 }
+
 main{
    border:0 40px 0 40px solid#F2F2F2;
 }
 h1{
    display: none;
 }
-.welcome_content{
+.welcome-content{
    text-align: center;
    height:509px;
-   padding-top: 77px;
+   padding-top: 27px;
    background-repeat: no-repeat;
 }
 .sedona{
@@ -58,12 +83,12 @@ h1{
    margin-top: 43px;
    background-color: #fff;
 }
-.content_title{
+.content-title{
    font-size: 21px;
    text-transform: uppercase;
    font-weight: 700;
 }
-.content_text{
+.content-text{
    font-size: 14px;
    text-transform: uppercase;
    font-weight: 400;
@@ -72,14 +97,14 @@ h1{
    height: 256px;
 }
 .sity{
-   display: flex;
-   justify-content: space-between;
+   display: grid;
+   grid-template-columns: 1fr 2fr;
    height: 256px;
 }
-.img_sity{
+.img-sity{
    margin: 0 0 0 0;
 }
-.services_text_first {
+.services-text-first {
    width: 400px;
    text-align: center;
    margin:0 0 0 0;
@@ -87,9 +112,10 @@ h1{
    text-transform: uppercase;
    padding-top: 47px;
 }
-.services_item{
-   height: 256px;
-   display: flex;
+.services-items{
+   height: 330px;
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
    justify-content: space-between;
    text-align: center;
    margin: 0 auto;
@@ -99,14 +125,15 @@ h1{
    background-color: #fff;
 }
 .bridge{
-   display: flex;
+   display: grid;
+   grid-template-columns: 2fr 1fr;
    justify-content: space-between;
    height: 256px;
 }
-.img_bridge{
+.img-bridge{
    margin: 0 auto;
 }
-.services_text_second{
+.services-text-second{
    width: 400px;
    text-align: center;
    margin: 0 auto;
@@ -114,21 +141,22 @@ h1{
    text-transform: uppercase;
    padding-top: 47px;
 }
-.services_text_item{
+.services-text-item{
    height:256px;
    text-align: center;
    margin: 0 auto;
    background-color: #EEEEEE;
    text-transform: uppercase;
    padding-top: 47px;  
-   display: flex;
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
    justify-content: space-between;
 }
 .text{
    width: 400px;
    height: 256px;
 }
-.content_item{
+.content-item{
    text-transform: uppercase;
    text-align: center;
 }
@@ -136,7 +164,7 @@ h1{
    text-align: center;
    margin-bottom: 0;
 }
-.search_hotel{
+.search-hotel{
    text-align: center;
    width: 568px;
    height: 86px;
@@ -145,37 +173,77 @@ h1{
    text-transform: uppercase;
    line-height: 26px;
 }
-.search_hotel h3{
+.search-hotel h3{
    padding-top: 30px;
    font-weight: 700;
    color: #ffffff;
    font-size: 21px;
 }
-.form{
+.form-modal{
    width:1199px;
    height:594px;
    margin: 0 auto;
    text-transform: uppercase;
 }
-.form_content{
+.modal-content{
    width: 568px;
    height: 395px;
    margin: 0 auto;
    background: #ffffff;
    padding:55px;
+   display: flex;
+   flex-direction: column;
 }
 input{
    background: #f2f2f2;
    text-transform: uppercase;
    font-weight: 700;
+   border: none;
 }
-.label{
+.modal-form{
+   font-weight: 700;
+   font-size: 14px;
+   line-height: 26px;
+   text-align: left;
    display: flex;
+   flex-direction:column;
 }
-.child{
-   margin-left: 60px;
+.modal-in input,
+.modal-out input{
+   width: 346px;
+   height: 38px;
+   padding-left: 13px;
+   background:url(../img/calendar.png);
+   background-repeat: no-repeat;
+   background-position:right ;
+   background-color:#f2f2f2;
 }
-.button{
+.modal-client input{
+   width: 114px;
+   height: 38px;
+   text-align: center;
+   
+}
+.modal-client{
+   display: flex;
+   align-items:center;
+   justify-content: space-between;
+   width: 458px;
+}
+input[type="submit"] {
+   width: 20px; 
+   height: 20px; 
+   border: none;
+   background-color:#f2f2f2;
+}
+input[type="number"] {
+   border: none; 
+   outline: none;
+   -webkit-appearance: none;
+   vertical-align: middle; 
+   text-align: center;
+  }
+.modal-btn{
    width:458px;
    height:58px;
    background:#81B3D2;
@@ -183,32 +251,204 @@ input{
    text-transform: uppercase;
    font-weight: 700;
    color: #ffffff;
+   border: none;
 }
-.footer{
+.footer-main{
    height: 120px;
    padding-left: 111px;
    padding-right: 138px; 
    vertical-align: middle;
 }
-.footer_section{
+.footer-section{
    display: flex;
-   justify-content: space-between;
+   justify-content: space-around;
    align-items: center;
    text-transform: uppercase;
-   margin-top: 23px;
+   margin-top: -4px;
    
 }
-.footer_img_item{
+.footer-img-item{
   width: 46px;
   height: 48px;
   background-color: #81B3D2;
 }
-.footer_from{
+.footer-from{
    display: flex;
    justify-content: space-between;
 }
 .phone{
    font-size: 21px;
    font-weight: 700;
+   text-align: center;
 }
+.search-catalog{
+   background-image: url(../img/bgcatalog.png);
+   background-repeat: no-repeat;
+   height: 217px;
+}
+.search-form{
+   display:grid;
+   grid-template-columns: 1fr 1fr 2fr;
+   justify-items: start;
+   padding: 26px 73px 0 72px;
+   color: #ffffff;
+}
+fieldset{
+   border: none;
+}
+.search-infrastructure{
+   text-align: left;
+   padding: 0;
+}
+.search-housing{
+   text-align: left;
+   padding: 0;
+}
+.search-cost{
+   color: #ffffff;
+}
+.cost{
+   text-align: center;
+   
+}
+.slider{
+   width: 319px;
+   margin-top: 10px;
+}
+.min-price input{
+   color: #ffffff;
+   background: transparent;
+   border: 1px solid #ffffff;
+   text-align: center;
+   width: 158px;
+   height: 36px;
+}
+.max-price input{
+   color: #ffffff;
+   background: transparent;
+   border: 1px solid #ffffff;
+   text-align: center;
+   width: 158px;
+   height: 36px;
+}
+.cost-button{
+   color: #ffffff;
+   background: transparent;
+   border: 1px solid #ffffff;
+   text-align: center;
+   width: 137px;
+   height: 36px;
+   margin-top: 10px;
+}
+.search-result{
+   height: 86px;
+   display: grid;
+   grid-template-columns: 135px 1fr 2fr;
+   grid-gap: 29px;
+   align-items: center;
+   padding-left: 73px;
+   text-transform: uppercase;
+}
+.catalog-found{
+   font-weight: 700;
+   font-size: 21px;
+   line-height: 26px;
+}
+.catalog-sorting{
+   display: flex;
+   flex-direction: row;
+}
+.catalog-sort p{
+   font-weight: 400;
+   font-size: 14px;
+   line-height: 18px;
+}
+.list-sorting-type {
+   display: flex;
+   flex-direction: row;
+   flex-wrap: nowrap;
+   width: 100%;
+}
+.list-sorting-type li{
+   font-weight: 400;
+   font-size: 14px;
+   line-height: 18px;
+   justify-self: end;
+   min-width: 100px;
+}
+.sort-up{
+   margin-right: 12px;
+}
+.hotel-item{
+   height: 150px;
+   padding-left: 73px;
+   display: grid;
+   grid-template-columns: 135px 1fr 2fr;
+   grid-gap: 29px;
+   border: 1px solid #E5E5E5;
+   margin: 0;
+   
+}
+.hotel-photo{
+   padding-top: 30px;
+}
+.hotel-info{
+   text-transform: uppercase;
+}
+.hotel-name{
+   font-weight: 700;
+   font-size: 21px;
+   line-height: 26px;
+   margin: 23px 0 0 0;
+}
+.hotel-price{
+   display: flex;
+   flex-direction: row;
+   flex-wrap: nowrap;
+   justify-content: flex-start;
+   margin-top: 7px;
 
+}
+.hotel-type{
+   font-weight: 400;
+   font-size: 14px;
+   line-height: 21px;
+   margin-top: 7px;
+   width: 126px;
+   margin: 0;
+}
+.hotel-value{
+   margin: 0;
+   width: 126px;
+   margin: 0;
+}
+.hotel-btn-first{
+   text-transform: uppercase;
+   font-weight: 700;
+   font-size: 14px;
+   line-height: 21px;
+   color: #ffffff;
+   background-color: #81B3D2;
+}
+.hotel-btn-second{
+   text-transform: uppercase;
+   font-weight: 700;
+   font-size: 14px;
+   line-height: 21px;
+   color: #ffffff;
+   background-color:#766357;
+}
+.hotel-rating{
+   justify-self: end;
+   margin-right: 73px;
+   color: #81B3D2;
+   padding-top: 30px;
+}
+.rating-value{
+   color: #000000;
+   font-weight: 400;
+   font-size: 14px;
+   line-height: 21px;
+   margin-top: 47px;
+   text-transform: uppercase;
+}
