--- a/css/normalize.css
+++ b/css/normalize.css
@@ -329,6 +329,14 @@ summary {
   display: list-item;
 }
 
+
+/**
+ * Add the correct display in IE 9-.
+ */
+
+ canvas {
+  display: inline-block;
+}
 /* Misc
    ========================================================================== */
 
