--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,11 @@
    margin: 0 40px 0 40px;
    display: grid;
    grid-template-rows: min-content 1fr min-content;
-   box-shadow: rgba(255, 255, 255, 1);
+   box-shadow: 0px 5px 15px rgba(0, 1, 1, 0.2);
+   background-color: #ffffff ;
+   position: relative;
 }
+
 h1 {
    display: none;
 }
@@ -64,30 +67,51 @@ img{
    max-width: 100%;
    height: auto;
 }
-.header{
+.page-header{
    display:flex;
    justify-content: space-between;
    background-color: var(--basic-white);
    height: 56px;
 }
 .page-menu{
+   width: 1200px;
    display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
    align-items: center;
 }
-.header-menu{
+.site-navigation{
+   width: 1200px;
    display: flex;
    flex-wrap: nowrap;
+   justify-content: space-around;
+   margin-top: 15px;
+   padding: 0 75px;
 }
-.header-item{
-   padding: 15px 72px;
-   font-size: 14px;
-   line-height:26px ;
+.site-navigation li {
+   width: 200px;
 }
-.header-section-logo{
+.site-navigation li:nth-child(2) {
+   margin-right: 131px;
+}
+.site-navigation li:nth-child(3) {
+   letter-spacing: 0.2px;
+}
+.site-navigation li:nth-child(1),
+.site-navigation li:nth-child(2) {
+    text-align: left;
+}
+.site-navigation li:nth-child(3),
+.site-navigation li:nth-child(4) {
+    text-align: right;
+}
+
+.page-menu .logo{
    height: 70px;
 }
 .logo {
-   margin-top: 0;
+   position: absolute;
+   left: 45%;
    z-index: 10;
 }
 main {
@@ -151,6 +175,7 @@ main {
    margin: 0 auto;
    text-transform: uppercase;
    padding-top: 60px;
+   padding-left: 0;
    margin-bottom: 60px;
    background-color: var(--basic-white);
 }
@@ -181,6 +206,7 @@ main {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    justify-content: space-between;
+   padding-left: 0;
 }
 .text {
    width: 400px;
@@ -224,9 +250,7 @@ main {
    align-items: center;
    justify-content:center;
    color: #ffffff;
-   
 }
-
 .form-modal {
    width: 1199px;
    height: 594px;
@@ -308,6 +332,7 @@ input[type="number"] {
 .modal-btn { 
    width:458px;
    height:58px;
+   padding-top: 16px;
    background:var(--basic-blue);
    font-size: 21px;
    text-transform: uppercase;
@@ -315,14 +340,9 @@ input[type="number"] {
    color: #FFFFFF;
    border: none;
    text-align: center;
-   vertical-align:middle;
-}
-
-.map-responsive{
-   margin-top: -78px;
-}
-.map-responsive iframe{
-   
+   display: flex;
+   flex-direction: column;
+   align-content: center;
 }
 .footer-main {
    height: 120px;
@@ -336,7 +356,6 @@ input[type="number"] {
    align-items: center;
    text-transform: uppercase;
    margin-top: -4px;
-   
 }
 .footer-img {
 display: flex;
