--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,8 @@ a:focus {
 }
 .page {
   height: 100%;
-  min-width: 1200px;
+  width: 1200px;
+  margin: auto;
 }
 .page-body {
   width: 1200px;
@@ -49,6 +50,7 @@ a:focus {
   box-shadow: 0px 5px 15px rgba(0, 1, 1, 0.2);
   background-color: #ffffff;
   position: relative;
+  margin: auto;
 }
 
 h1 {
@@ -105,12 +107,18 @@ img {
 .site-navigation li:nth-child(1),
 .site-navigation li:nth-child(2) {
   text-align: left;
+  margin-left: -39px;
 }
 .site-navigation li:nth-child(3),
 .site-navigation li:nth-child(4) {
   text-align: right;
+  margin-right: -39px;
 }
-
+.header-item {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 26px;
+}
 .page-menu .logo {
   height: 70px;
 }
@@ -169,6 +177,7 @@ main {
   background-color: var(--basic-blue);
   text-transform: uppercase;
   padding-top: 47px;
+  color: var(--basic-white);
 }
 .services-items {
   height: 330px;
@@ -199,6 +208,7 @@ main {
   background-color: var(--basic-blue);
   text-transform: uppercase;
   padding-top: 47px;
+  color: var(--basic-white);
 }
 .services-text-item {
   height: 256px;
@@ -445,6 +455,7 @@ fieldset {
 }
 .cost {
   text-align: center;
+  margin: auto;
 }
 .slider {
   width: 319px;
